gentoo: fix remaining references to fbsplash

--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -4,11 +4,20 @@
 # on the kernel command line is used).
 # SPLASH_THEME="gentoo"
 
-# On which TTYs should fbsplash be enabled? Defaults to RC_TTY_NUMBER.
-# SPLASH_TTYS="1 2 3 4 5 6"
+# Save splash profile information during boot?
+# SPLASH_PROFILE="no"
 
-# What font to use? Defaults to what fbtruetype uses.
-# SPLASH_FONT="luxisri.ttf"
+# Use KDTEXT or KDGRPAHICS?
+# SPLASH_KDMODE="text"
+
+# Which tty to use for the silent splash
+# SPLASH_TTY=16
+
+# Which splash mode should be activated? Valid values are:
+#  - silent: silent and verbose modes
+#  - silentonly: silent mode only
+#  - verbose: verbose mode only
+# SPLASH_MODE_REQ="silent"
 
 # Boot/reboot/shutdown message overrides.
 # SPLASH_BOOT_MESSAGE="Booting the system"
@@ -18,6 +27,6 @@
 # Should we drop to verbose mode on initscript errors? (yes/no)
 SPLASH_VERBOSE_ON_ERRORS="yes"
 
-# Allows to set different themes on different consoles
-# format: "<console>:<theme> <console>:<theme> (...)"
-# SPLASH_TTY_MAP="1:emergence"
+# Which special effects should be used?
+# This a comma separated list. Valid items: fadein, fadeout
+SPLASH_EFFECTS="fadein,fadeout"
