core: fix compilation issues with the new libraries

--- a/core/Makefile
+++ b/core/Makefile
@@ -60,7 +60,8 @@ ROOT = $(shell pwd)
 # Flags for the kernel utilities
 K_CFLAGS = -Os -w -ffunction-sections -fdata-sections $(MISCINCS) \
 		-I$(ROOT)/$(ZLIBSRC) -I$(ROOT)/$(FT2SRC)/include -I$(ROOT)/$(OBJDIR)/jpeglib \
-		-DWITH_ERRLIST -DTARGET_KERNEL -DTT_CONFIG_OPTION_BYTECODE_INTERPRETER
+		-DWITH_ERRLIST -DTARGET_KERNEL -DTT_CONFIG_OPTION_BYTECODE_INTERPRETER \
+		-I$(ROOT)/$(LPNGSRC) -I$(ROOT)/$(JPEGSRC)
 
 PNGDEFS = -DPNG_NO_WRITE_TIME -DPNG_NO_FLOATING_POINT_SUPPORTED -DPNG_NO_WRITE_SUPPORTED -DPNG_NO_READ_iTXt \
 		-DPNG_LEGACY_SUPPORTED -DPNG_NO_PROGRESSIVE_READ -DPNG_NO_MNG_FEATURES -DPNG_NO_CONSOLE_IO \
