core: use evdev in the fbsplash input subsystem
Replace the somewhat broken input subsystem based on reading /dev/console
with an evdev-based one.

--- a/core/misc/Makefile
+++ b/core/misc/Makefile
@@ -1,7 +1,7 @@
 LDLIBS = -lfbsplashrender
 CFLAGS = -g -Wall -I../objs
 
-all: splashtest benchmark blittest
+all: splashtest benchmark blittest inputtest
 
 clean:
-	rm -rf splashtest benchmark
+	rm -rf splashtest benchmark inputtest
