--- a/gentoo/splash.conf
+++ b/gentoo/splash.conf
@@ -1,32 +1,55 @@
 # Config file for splashutils.
 
-# A theme to use, probably best left commented (the theme specified
-# on the kernel command line is used).
-# SPLASH_THEME="gentoo"
+# Boot/reboot/shutdown message overrides.
+# SPLASH_BOOT_MESSAGE="Booting the system (\$progress%)"
+# SPLASH_REBOOT_MESSAGE="Rebooting the system (\$progress%)"
+# SPLASH_SHUTDOWN_MESSAGE="Shutting the system down (\$progress%)"
 
-# Save splash profile information during boot?
+# Should we drop to verbose mode on initscript errors? (yes/no)
+SPLASH_VERBOSE_ON_ERRORS="yes"
+
+# Which special effects should be used?
+# This should be a comma separated list. Valid items: fadein, fadeout
+SPLASH_EFFECTS="fadein,fadeout"
+
+#########################################################################
+# The options below affect settings which are normally specified on the
+# kernel command line and are probably useful only in uncommon
+# configurations. Note that the corresponding kernel command line
+# settings will override any options set below.
+#########################################################################
+
+# Save splash profile information during boot? If set to 'yes', a record
+# of the boot-up sequence will be kept in /lib/splash/cache/profile. The
+# profile file is useful for debugging purposes and for replaying the
+# boot sequence with `splash_manager -c replay`. It might slightly slow
+# down the boot, so don't activate it if you don't plan to use it.
 # SPLASH_PROFILE="no"
 
-# Use KDTEXT or KDGRPAHICS?
+# Which console mode to use for the silent splash. Valid values are:
+# text,graphics. If 'text' is selected, the splash tty will be treated
+# just like any other tty by the kernel. With the 'graphics' option,
+# the kernel will not touch the tty in any way. 'graphics' could be
+# useful e.g. for preventing error messages from being displayed over
+# the splash screen. Normally, this shouldn't be necessary. Use only
+# as a last resort.
 # SPLASH_KDMODE="text"
 
-# Which tty to use for the silent splash
+# Which theme to use, probably best left commented out (the theme
+# specified on the kernel command line is used).
+# SPLASH_THEME="gentoo"
+
+# Which tty to use for the silent splash. If you change it, make sure
+# the tty isn't used by something else (interactive console, X, etc).
+# It's safest to leave it commented and let fbsplashd use the default
+# value.
 # SPLASH_TTY=16
 
 # Which splash mode should be activated? Valid values are:
 #  - silent: silent and verbose modes
 #  - silentonly: silent mode only
 #  - verbose: verbose mode only
+# If commented out, the mode requested on the command line will be
+# used.
 # SPLASH_MODE_REQ="silent"
 
-# Boot/reboot/shutdown message overrides.
-# SPLASH_BOOT_MESSAGE="Booting the system"
-# SPLASH_REBOOT_MESSAGE="Rebooting the system"
-# SPLASH_SHUTDOWN_MESSAGE="Shutting the system down"
-
-# Should we drop to verbose mode on initscript errors? (yes/no)
-SPLASH_VERBOSE_ON_ERRORS="yes"
-
-# Which special effects should be used?
-# This a comma separated list. Valid items: fadein, fadeout
-SPLASH_EFFECTS="fadein,fadeout"
