--- a/core/scripts/splash_resize.in
+++ b/core/scripts/splash_resize.in
@@ -13,7 +13,7 @@
 # $Header: /srv/cvs/splash/utils/scripts/splash_resize,v 1.2 2004/11/12 17:42:16 spock Exp $
 
 if ($#ARGV < 2) {
-	print "splash_resize/splashutils-%PKG_VERSION%\n";
+	print "splash_resize/splashutils-@PACKAGE_VERSION@\n";
 	print "Usage: splash_resize <theme> <old_res> <new_res>\n";
 	exit 0;
 }
@@ -22,8 +22,8 @@ $theme = $ARGV[0];
 $old_res = $ARGV[1];
 $new_res = $ARGV[2];
 
-open IN,"</etc/splash/$theme/$old_res.cfg" || die "Can't open source config file."; 
-open OUT,">/etc/splash/$theme/$new_res.cfg" || die "Can't write to destination config file."; 
+open IN,"<@sysconfdir@/splash/$theme/$old_res.cfg" || die "Can't open source config file."; 
+open OUT,">@sysconfdir@/splash/$theme/$new_res.cfg" || die "Can't write to destination config file."; 
 
 $old_res =~ /(\d+)x(\d+)/; $old_x = $1; $old_y = $2;
 $new_res =~ /(\d+)x(\d+)/; $new_x = $1; $new_y = $2;
